[package]
name = "logge-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", default-features = false, features = ["clock"]}
colored = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
